--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ sourceSets {
 }
 
 dependencies {
+  compile 'com.diffplug.osgi:com.diffplug.osgi.extension.sun.misc:0.0.0'
   compile 'org.ops4j.pax.logging:pax-logging-api:1.9.1'
   compile 'org.eclipse.xtend:org.eclipse.xtend.lib:2.11.0'
   compile 'org.osgi:org.osgi.service.component.annotations:1.3.0'
