--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,12 @@ sourceCompatibility = 1.8
 defaultTasks 'createOsgiRuntime'
 repositories.mavenCentral()
 
+jar {
+  manifest {
+    attributes("Bundle-Name": "LEFFE - Web Gateway")
+  }
+}
+
 sourceSets {
   main {
     java.srcDirs= ['src/main']
@@ -25,11 +31,11 @@ sourceSets {
 }
 
 dependencies {
-  compile 'com.diffplug.osgi:com.diffplug.osgi.extension.sun.misc:0.0.0'
-  compile 'org.ops4j.pax.logging:pax-logging-api:1.9.1'
-  compile 'org.eclipse.xtend:org.eclipse.xtend.lib:2.11.0'
-  compile 'org.osgi:org.osgi.service.component.annotations:1.3.0'
-  compile 'io.vertx:vertx-core:3.4.1'
+  systemLib 'org.ops4j.pax.logging:pax-logging-api:1.9.1'
+  systemLib 'org.eclipse.xtend:org.eclipse.xtend.lib:2.11.0'
+  systemLib 'org.osgi:org.osgi.service.component.annotations:1.3.0'
+  systemLib 'io.vertx:vertx-core:3.4.1'
+  systemLib 'org.raml:raml-parser-2:1.0.7'
   
   osgiRuntime 'org.apache.felix:org.apache.felix.configadmin:1.8.14'
   osgiRuntime 'org.apache.felix:org.apache.felix.scr:2.0.8', { transitive = false }
@@ -37,9 +43,11 @@ dependencies {
 
 bundle {
   instruction '-dsannotations', '*'
+  includeTransitiveDependencies = true
 }
 
 runOsgi {
+  config += [ 'org.osgi.framework.system.packages.extra': 'sun.misc' ]
   bundles += [ project ]
   outDir = '../runtime'
 }
