--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,10 @@ dependencies {
   systemLib 'org.ops4j.pax.logging:pax-logging-api:1.9.1'
   systemLib 'org.eclipse.xtend:org.eclipse.xtend.lib:2.11.0'
   systemLib 'org.osgi:org.osgi.service.component.annotations:1.3.0'
+  
   systemLib 'io.vertx:vertx-core:3.4.1'
+  systemLib 'io.vertx:vertx-web:3.4.1'
+  
   systemLib 'org.raml:raml-parser-2:1.0.7'
   
   osgiRuntime 'org.apache.felix:org.apache.felix.configadmin:1.8.14'
