--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,9 @@ sourceSets {
 dependencies {
   systemLib 'org.ops4j.pax.logging:pax-logging-api:1.9.1'
   systemLib 'org.eclipse.xtend:org.eclipse.xtend.lib:2.11.0'
+  
   systemLib 'org.osgi:org.osgi.service.component.annotations:1.3.0'
+  systemLib 'org.osgi:org.osgi.framework:1.8.0'
   
   systemLib 'io.vertx:vertx-core:3.4.1'
   systemLib 'io.vertx:vertx-web:3.4.1'
@@ -46,7 +48,6 @@ dependencies {
 
 bundle {
   instruction '-dsannotations', '*'
-  includeTransitiveDependencies = true
 }
 
 runOsgi {
